# SUB_IoT

DLG_ESP32/DLG_001_ESP_v0/: .cproject  .project  CHANGELOG.md  CMakeLists.txt  README.md  sdkconfig
DLG_ESP32/DLG_001_ESP_v0/main/: CMakeLists.txt  ConfigBoard_DLG001.cpp  DLG001_def.cpp  Sensor.cpp  TCA6408A_lib.cpp  main.cpp
DLG_ESP32/DLG_001_ESP_v0/main/include/: ConfigBoard_DLG001.hpp  DLG001_def.hpp  Sensor.hpp  TCA6408A_lib.hpp
DLG_ESP32/DLG_PowerAnalyzer_ArduinoVersion/: Config.cpp  Config.h  DLG_PowerAnalyzer_ArduinoVersion.ino  DLG_def.cpp  DLG_def.h  Notes.h  Sensor.cpp  Sensor.h  pixel_debug.cpp  pixel_debug.h
DLG_ESP32/DLG_UNIFIC_PowerAnalyzer/: Communicaciones.h  DLG_UNIFIC_PowerAnalyzer.ino  FilesFormat.h  Notas.ino  RS485astican.h  config.h  configRS485.h  config_DLG.h  gVariables.h  myRS485.h
DLG_ESP32/DLG_WEATHERSTATION_V2/: Config.h  DLG_WEATHERSTATION_V2.ino  DLG_def.h  Notes.h  RTO_resources.h  config.cpp  taskComs.h  taskReadRS485.h
GALGAS/SSM_DL_WP/: F_aux.h  Params.h  SSM_DL_WP.ino  events.h  notes.h  taskBLE.h  taskDataReading.h  taskISRWire.h  taskLedStatus.h  taskWiFi.h
GALGAS/StrainGaugeBase_rtos/: F_aux.h  Params.h  StrainGaugeBase_rtos.ino  events.h  notes.h
GP_THCO2_V.0.0.4/: Comms.h  Config.h  F_Aux.h  GP_THCO2_V.0.0.4.ino  analogReading.h  defpin_GP.h  notes.h
SSM_RTOS_WP_dev_v047.0.3_DERIVA_GPS/: SSM_RTOS_WP_dev_v047.0.3_DERIVA_GPS.ino  commESP32.h  commR5.h  communications.h  events.h  gestionTiempo.h  notes.h  parametros.h  queuesDefinitions.h  taskComm.h  taskFile.h  taskMicroAnaRead.h  taskPwrMagnament.h
(+192 files in other folders)
